# Arieo-BuildEnv

./: .gitignore  ArieoPackage.yaml  CMakeLists.txt  CMakePresets.json.in  arieo_package.json  build_environment.cmake.in  build_package.cmake  install.cmake  install_package.cmake  package.json
cmake/: CMakePresets.json.in  build_engine_project.cmake  build_environment.cmake  engine_project.cmake  engine_project_install_config.cmake  engine_project_install_config.cmake.in  install_engine_project.cmake
cmake/application/: application_project.cmake
cmake/application/script/: application_script_cxx.cmake
cmake/codegen/: generate_cxx_ast.py  interface_codegen.cmake  xxx.interface.json.mustache  xxx.interface.wit.mustache  xxx.interface_info.h.mustache  xxx.wasm.cs.mustache  xxx.wasm.h.mustache  xxx.wasm.rs.mustache
cmake/engine_projects/: engine_shared_library_project.cmake  engine_static_library_project.cmake
cmake/package/: arieo_package.cmake  build_engine_project_package.cmake  install_engine_project_package.cmake  search_engine_project_packages.cmake
cmake/presets/: android.armv8.json  base.json.in  emscripten.wasm32.json  macos.arm64.json  raspberry.armv8.json  ubuntu.x86_64.json  windows-dev.x86_64.json  windows.x86_64.json
cmake/projects/: engine_interface_project.cmake  engine_module_project.cmake  engine_static_library_project.cmake  project_basic_paramters.cmake  project_dependencies_parameters.cmake  project_install_paramters.cmake  project_outputs_paramters.cmake
cmake/projects/engine/: engine_project.cmake  engine_project_basic_paramters.cmake
conan/profiles/host/: conan_host_profile.android.armv8.txt  conan_host_profile.emscripten.wasm32.txt  conan_host_profile.macos.arm64.txt  conan_host_profile.raspberry.armv8.txt  conan_host_profile.ubuntu.x86_64.txt  conan_host_profile.windows.x86_64.txt
